hphp/hack/test/typecheck/inout/bad_inout_hint_return6.php
<?hh

function foo(): (function(inout int): int) {
  return function(inout num $x) {
    return 42;
  };
}
